; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/can/sja1000/extr_sja1000_isa.c_sja1000_isa_port_read_reg_indirect.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/can/sja1000/extr_sja1000_isa.c_sja1000_isa_port_read_reg_indirect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sja1000_priv = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sja1000_priv*, i32)* @sja1000_isa_port_read_reg_indirect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sja1000_isa_port_read_reg_indirect(%struct.sja1000_priv* %0, i32 %1) #0 {
  %3 = alloca %struct.sja1000_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store %struct.sja1000_priv* %0, %struct.sja1000_priv** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.sja1000_priv*, %struct.sja1000_priv** %3, align 8
  %7 = getelementptr inbounds %struct.sja1000_priv, %struct.sja1000_priv* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @outb(i32 %9, i64 %10)
  %12 = load i64, i64* %5, align 8
  %13 = add i64 %12, 1
  %14 = call i32 @inb(i64 %13)
  ret i32 %14
}

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @inb(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
